--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -48,10 +48,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Colecciones\Identificable.cs" />
+    <Compile Include="Colecciones\ListaID.cs" />
     <Compile Include="Estudio\Back-End\Abogado.cs" />
     <Compile Include="Estudio\Back-End\Estudio.cs" />
     <Compile Include="Estudio\Back-End\Expediente.cs" />
-    <Compile Include="Estudio\Back-End\Identificable.cs" />
     <Compile Include="Estudio\Back-End\Persona.cs" />
     <Compile Include="Estudio\Excepciones.cs" />
     <Compile Include="Program.cs" />
@@ -61,6 +62,7 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Colecciones" />
     <Folder Include="Estudio" />
     <Folder Include="Estudio\Back-End" />
   </ItemGroup>
