--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Colecciones\Identificable.cs" />
     <Compile Include="Colecciones\ListaID.cs" />
     <Compile Include="Estudio\Back-End\Abogado.cs" />
+    <Compile Include="Estudio\Back-End\Colecciones\ListaAbogados.cs" />
+    <Compile Include="Estudio\Back-End\Colecciones\ListaExpedientes.cs" />
     <Compile Include="Estudio\Back-End\Estudio.cs" />
     <Compile Include="Estudio\Back-End\Expediente.cs" />
     <Compile Include="Estudio\Back-End\Persona.cs" />
@@ -65,6 +67,7 @@
     <Folder Include="Colecciones" />
     <Folder Include="Estudio" />
     <Folder Include="Estudio\Back-End" />
+    <Folder Include="Estudio\Back-End\Colecciones" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
