Tp5 terminado con opcionales

--- a/Proyecto 7 - Patrones/TP.csproj
+++ b/Proyecto 7 - Patrones/TP.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="TP6 Python\**" />
+    <EmbeddedResource Remove="TP6 Python\**" />
+    <None Remove="TP6 Python\**" />
+  </ItemGroup>
+
 </Project>
